addition for change display

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>hello coursera next</title>
 </head>
 <body>
-<h1>hello coursera next</h1>
+<h1>hello coursera next using github</h1>
 </body>
 </html>
